Continuing to iron out zoom issues on mobile, specifically with button elements

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,9 @@ button {
     background: none;
     border: none;
 }
+input [type="button"] { 
+    touch-action: manipulation; 
+}
 h2 {
     font-size: 3rem;
 }
